Updated header font. Edit project filter. Added favicon.

--- a/about.html
+++ b/about.html
@@ -4,9 +4,17 @@
 	<title>Projects - Taylor Wilkinson</title>
 
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<!-- favicons -->
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="theme-color" content="#ffffff">
 
 	<!-- normalize -->
 	<link rel="stylesheet" href="css/normalize.min.css">
@@ -17,8 +25,10 @@
 	<link rel="stylesheet" href="css/flexbox.css">
 
 	<!-- fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+	<!-- Montserrat -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500" rel="stylesheet">
+	<!-- Roboto -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
@@ -46,20 +56,25 @@
 	</nav><!-- Navigation bar -->
 
 	<div class="container body-copy">
+		<!--
 		<div class="row full-row">
-			<div class="col">
+			<div class="col offset-lg-1 ">
 				<h1>Greetings, weary traveller.</h1>
 			</div>
-		</div> <!-- summary heading -->
+		</div>
+		-->
+		<!-- summary heading -->
 
 		<div class="row">
-			<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
-				<img src="img/portrait-crop.png" alt="A photograph of Taylor in a stairwell" id="myBigOlFace">
+			<div class="col-lg-3 offset-lg-1 col-md-4 col-sm-12">
+				<img src="img/portrait-crop.png" alt="A photograph of Taylor in a stairwell" id="portrait">
 			</div>
-			<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
-				<p>I'm a front-end web developer and designer living in Vancouver, B.C. I'm attending SFU and pursuing a B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
-				<p>My goal is to grow as a developer and designer by creating applications that provide experiences that are not only enjoyable for the user, but are considerate of a diverse userbase regardless of economic, or ethnic status. As an articulate communicator, I'm able to engage with coworkers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
-				<p>Outside of work-related stuff, you can talk with me about D&D, video games, and Rupaul's Drag Race.</p>
+			<div class="col-lg-6 col-md-8 col-sm-12">
+				<p>Hailing from the Okanagan Valley and living in Vancouver BC, I'm a front-end web developer who is getting her B.Sc. in Interactive Arts and Technology at SFU.</p>
+				<p>My goal is to create websites and applications that reflect my client's identity while providing a pleasant experience for the end user.</p>
+				<p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
+				<p>Interested in hearing about my work, or want to have a chat? Feel free to shoot me an e-mail.</p>
+				<p><em>Outside of work-related stuff, you can talk with me about Rupaul's Drag Race, your D&D character, your favorite video game, or your dog.</em></p>
 			</div>
 		</div> <!-- end the first summary row -->
 
