--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 	<title>Taylor Wilkinson</title>
 
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<!-- favicons -->
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="theme-color" content="#ffffff">
 
 	<!-- normalize -->
 	<link rel="stylesheet" href="css/normalize.min.css">
@@ -17,17 +25,19 @@
 	<link rel="stylesheet" href="css/flexbox.css">
 
 	<!-- fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+	<!-- Montserrat -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500" rel="stylesheet">
+	<!-- Roboto -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
 	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
+			<a href="index.html" class="nav-item active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
 
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="index.html" class="nav-item active navbar-brand" id="navNameText">
 				<p id="navTitle">taylor wilkinson</p>
 				<p id="navSubtitle">developer + designer</p>
 			</a><!-- inital icon -->
@@ -38,25 +48,25 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="index.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="index.html" id="navLink" class="nav-link">PROJECTS</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">RESUME</a>
+					<a href="about.html" id="navLink" class="nav-link">ABOUT</a>
 				</div>
-			</div> <!-- Collapse -->
-		</div>
+			</div><!-- Collapse -->
+		</div><!-- Container -->
 	</nav><!-- Navigation bar -->
 
 	<div class="container">
 		<div class="col-sm-12 col-md-3" id="filter-list">
 			<div class="row">
 				<div id="hideOnSM">
-					<h3>Filter</h3>
+					<h3 class="filter-header">Project Filter</h3>
 					<ul id="filter-ul">
-						<li><button class="filter-button" data-filter="all">All</button></li>
-						<li><button class="filter-button" data-filter="web">Web Development</button></li>
-						<li><button class="filter-button" data-filter="game">Game Development</button></li>
+						<li><button class="filter-button" data-filter="all">all</button></li>
+						<li><button class="filter-button" data-filter="web">web development</button></li>
+						<li><button class="filter-button" data-filter="game">game development</button></li>
 						<!-- <li><button class="filter-button" data-filter="graphics">Graphic Design</button></li> -->
-						<li><button class="filter-button" data-filter="communications">Communications</button></li>
+						<li><button class="filter-button" data-filter="communications">communications</button></li>
 					</ul>
 					<!--
 					<button id="filter-link" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#filter-collapse" aria-expanded="false" aria-controls="filter-collapse">
