Updated content for AAM, Sprout, and Times Past

--- a/work/adoption-awareness.html
+++ b/work/adoption-awareness.html
@@ -65,12 +65,27 @@
 			</div>
 		</div>
 		<div class="row full-row">
-			<div class="col-lg-6 no-side-padding">
+			<div class="col-lg-8 no-side-padding">
 				<h1>Adoption Awareness Month</h1>
 			</div>
 		</div> <!-- title section -->
 
 		<div class="row full-row">
+			<div class="col-lg-4 no-side-padding">
+				<h2>team</h2>
+				<p>Individual project, while working for Adoptive Families Association of B.C.</p>
+			</div>
+			<div class="col-lg-4 no-side-padding">
+				<h2>technical</h2>
+				<p>Premiere Pro, Illustrator, Photoshop, Copywriting, Press Release Writing, Social Media Management</p>
+			</div>
+			<div class="col-lg-4 no-side-padding">
+				<h2>my role</h2>
+				<p>Communications Co-ordinator, Primary Designer, Video Editor</p>
+			</div>
+		</div> <!-- close project summary -->
+
+		<!-- <div class="row full-row">
 			<div class="col-xs-12 col-md-6 col-lg-6 no-side-padding">
 				<h2>technical</h2>
 				<div class="row">
@@ -95,8 +110,7 @@
 				<p>Primary Designer</p>
 				<p>Video Editor</p>
 			</div>
-		<!-- close project summary -->
-		</div>
+		</div> -->
 
 		<div class="row">
 			<div class="col-lg-6">
@@ -140,12 +154,12 @@
 				<p>With a plan of only creating four videos, I was able to manage my time effectively and made six videos for the month: four that focused on young adoptees speaking about what the word “family” meant to them, and two that focused on giving advice for prospective adoptive parents and to kids going through the adoption process. They were well received on social media, getting the most engagement on Facebook as that’s where the majority of AFABC’s online followers are.</p>
 			</div>
 			<div class="col-lg-6">
-				<figure>
+				<!-- <figure>
 					<img src="../img/Thumbnail - AAM - 2 - WDFMTY.png" alt="Thumbnail made for one of the Adoption Awareness Month Videos">
 					<figcaption>
 						Thumbnail made for one of the Adoption Awareness Month Videos. November 2017.
 					</figcaption>
-				</figure>
+				</figure> -->
 				<figure>
 					<img src="../img/AAM_PremiereProScreenshot.png" alt="Screenshot of Premiere Pro workplace, displaying one of my Adoption Awareness Month video projects.">
 					<figcaption>
