--- a/work/sprout.html
+++ b/work/sprout.html
@@ -77,7 +77,7 @@
 			</div>
 			<div class="col-lg-4 no-side-padding">
 				<h2>tools</h2>
-				<p>HTML5, CSS3</p>
+				<p>HTML5, CSS3, GitKraken</p>
 			</div>
 			<div class="col-lg-4 no-side-padding">
 				<h2>my role</h2>
@@ -88,14 +88,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>brief</h2>
-				<p>A month long project to design a website for a fictional company of our making, with an emphasis on responsive design. (IAT 339). 2018.</p>
-				<p>Project requirements included:</p>
-				<ul>
-					<li>Company styleguide, including grid structure and colour swatches
-					<li>Content using real language (i.e. no Lorem Ipsum) appropriate for the company, it's voice, and the products it sells, including: company updates/events, about the company and multi-product/multi-service listings</li>
-					<li>Determine and build a sitemap to illustrate page hierarchy and the links between pages</li>
-					<li>Working with git, and proof of team members work on their individual branches</li>
-				</ul>
+				<p>A month long project to design a website for a fictional company of our making, with an emphasis on responsive design. Our fictional company was Sprout Credit Union, which I created for a prior project where we needed to code out a <a href="http://www.sfu.ca/~tjwilkin/IAT%20339/P01/" target="_blank">styleguide</a> for said company. IAT 339. February 2018.</p>
 			</div>
 			<div class="col-lg-6">
 				<figure>
@@ -159,8 +152,14 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6">
-				<h2>information architecture</h2>
-				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
+				<h2>information architecture & copywriting</h2>
+				<p>For this project, we were required to include and organize specific content in the site. Namely:</p>
+				<ul>
+					<li>Company styleguide, including grid structure and colour swatches
+					<li>Content using real language (i.e. no Lorem Ipsum) appropriate for the company, it's voice, and the products it sells, including: company updates/events, about the company and multi-product/multi-service listings</li>
+					<li>Determine and build a sitemap to illustrate page hierarchy and the links between pages</li>
+					<li>Working with git, and proof of team members work on their individual branches</li>
+				</ul></p>
 				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
 			</div>
 			<div class="col-lg-6">
