--- a/work/times-past.html
+++ b/work/times-past.html
@@ -90,15 +90,15 @@
 			<div class="col-lg-6">
 				<h2>brief</h2>
 				<p>Design and develop a video game as a course project for Advanced Game Design (IAT 410). Time’s Past is a narrative adventure/puzzle game inspired by the point-and-click genre of games. Built in Unity 3D. Fall 2018.</p>
-				<p></p>
+				<p>Time’s Past follows Harriet, a young archaeologist who finds an ancient temple in the desert. Incredibly, she finds a ghostly figure -- a man named Basil who lived thousands of years before her. Through magical means, they work together to solve the temple’s puzzles by utilizing the passage of time between them, in order to solve the temple’s mysteries and find Basil’s lost love.</p>
 			</div>
 		</div> <!-- end of section :: brief -->
 
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>design</h2>
-				<p>When brainstorming, Jules presented her idea for a game based around solving puzzles across time by using a seeing-stone to view the past. We found inspiration in point-and-click adventure games, such as Kings Quest and The Day Of The Tentacle. Through these early iterations, we fleshed out this idea and the narrative to help inform our design.</p>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
+				<p>In the early brainstorming stages, the project’s Creative Lead (Jules) presented her idea for a game based around solving puzzles across time by using a seeing-stone to view the past. In exploring the concept, we found inspiration in early 90’s point-and-click adventure games, such as Kings Quest and The Day Of The Tentacle.</p>
+				<p>During the game’s early iterations, I helped to flesh out the game’s narrative which would inform our design. I also made sketches and diagrams (such as our narrative flowboard) to aid in exploring potential features, UI elements, and mechanic concepts. Throughout development, I contributed to the game’s puzzle design by sharing my ideas as well as helping to expand on concepts from the group. My personal process included lots of sketching as well as research, to help find inspiration for environmental objects that would change over time, creating opportunities for interesting puzzles (i.e. a garden becoming overgrown when it is given increased access to light over time).</p>
 			</div>
       <div class="col-lg-6">
 				<figure>
@@ -113,7 +113,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>development</h2>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
+				<p>This was my first Unity project in addition to my first time developing in C#. Thankfully, my familiarity with Java made </p>
 			</div>
       <div class="col-lg-6">
 				<figure>
