Edits to footer & added content for Times Past

--- a/work/times-past.html
+++ b/work/times-past.html
@@ -96,6 +96,23 @@
 
 		<div class="row">
 			<div class="col-lg-6">
+				<h2>development</h2>
+				<p>Time's Past was my first C# project in addition to being my first Unity project. Knowing that I was unfamiliar with the software, I searched basic tutorials in advance to learn more about Unity and writing C# scripts. I also was comfortable with Java prior to this course, and knowing that they're both languages based in C made me feel comfortable at the start of the project.</p>
+        <p>As the primary developer who became the sole developer as the semester progressed, the responsibility fell on me to set deadlines for the multiple stages of ... ... ... ... ...</p>
+			</div>
+      <div class="col-lg-6">
+				<figure>
+					<img src="../img/timesPast_prototype1.gif" alt="GIF of our first playable prototype, showing the playable characters moving in a 3D isometric environment with a fixed camera.">
+					<figcaption>
+						Preview of our first playable prototype, experimenting with a static isometric camera and fully 3D game. October, 2018.
+					</figcaption>
+				</figure>
+			</div><!-- row 1 -->
+
+		</div> <!-- end of section :: game development -->
+
+		<div class="row">
+			<div class="col-lg-6">
 				<h2>design</h2>
 				<p>In the early brainstorming stages, the project’s Creative Lead (Jules) presented her idea for a game based around solving puzzles across time by using a seeing-stone to view the past. In exploring the concept, we found inspiration in early 90’s point-and-click adventure games, such as Kings Quest and The Day Of The Tentacle.</p>
 				<p>During the game’s early iterations, I helped to flesh out the game’s narrative which would inform our design. I also made sketches and diagrams (such as our narrative flowboard) to aid in exploring potential features, UI elements, and mechanic concepts. Throughout development, I contributed to the game’s puzzle design by sharing my ideas as well as helping to expand on concepts from the group. My personal process included lots of sketching as well as research, to help find inspiration for environmental objects that would change over time, creating opportunities for interesting puzzles (i.e. a garden becoming overgrown when it is given increased access to light over time).</p>
@@ -110,23 +127,15 @@
 			</div>
 		</div> <!-- end of section :: game design -->
 
-		<div class="row">
+    <div class="row">
 			<div class="col-lg-6">
-				<h2>development</h2>
-				<p>This was my first Unity project in addition to my first time developing in C#. Thankfully, my familiarity with Java made </p>
+				<h2>reflections</h2>
+				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
+				<p>.Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
+				<button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button>
+        <!-- <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button> -->
 			</div>
-      <div class="col-lg-6">
-				<figure>
-					<img src="../img/timesPast_prototype1.gif" alt="GIF of our first playable prototype, showing the playable characters moving in a 3D isometric environment with a fixed camera.">
-					<figcaption>
-						Preview of our first playable prototype, experimenting with a static isometric camera and fully 3D game. October, 2018.
-					</figcaption>
-				</figure>
-			</div><!-- row 1 -->
-      <div class="col-lg-6">
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
-			</div>
-      <div class="col-lg-6">
+			<div class="col-lg-6">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -156,51 +165,7 @@
 				<figcaption>
 					Three screenshots of the game's first level, showcasing Harriet and Basil's perspectives, as well as the Gem Collection UI. December 2018.
 				</figcaption>
-      </div><!-- row 2 -->
-		</div> <!-- end of section :: game development -->
-
-    <div class="row">
-			<div class="col-lg-6">
-				<h2>design</h2>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
-			</div>
-      <div class="col-lg-6">
-				<figure>
-          <img src="../img/timesPast_designMeeting.jpg" alt="Photograph of our brainstorming sessions when designing our alpha prototype.">
-					<figcaption>
-						Photograph of our brainstorming sessions when designing our alpha prototype. October, 2018.
-					</figcaption>
-				</figure>
-			</div>
-		</div> <!-- end of section :: game design -->
-
-    <div class="row">
-			<div class="col-lg-6">
-				<h2>project management</h2>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy.</p>
-			</div>
-			<div class="col-lg-6 embed-responsive embed-responsive-16by9">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Hel3uIEb6YU?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
-		</div> <!-- end of section :: project management -->
-
-    <div class="row">
-			<div class="col-lg-6">
-				<h2>reflections</h2>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
-				<p>.Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
-        <p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
-				<button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button>
-        <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button>
-			</div>
-			<div class="col-lg-6">
-				<figure>
-					<img src="" alt="">
-					<figcaption>
-						[caption here. date.]
-					</figcaption>
-				</figure>
-			</div>
+      </div>
 		</div> <!-- end of section :: reflections -->
 	</div> <!-- landing page content TBD -->
 
