--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
   	<script src="js/bootstrap.min.js"></script>
 
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="https:/code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- <script src="https:/code.jquery.com/jquery-1.11.1.min.js"></script> -->
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/filter.js"></script>
 		<script src="js/projectHover.js"></script>
 </body>
