--- a/about.html
+++ b/about.html
@@ -65,16 +65,15 @@
 		-->
 		<!-- summary heading -->
 
-		<div class="row">
+		<div class="row" id="full-width-content">
 			<div class="col-lg-3 offset-lg-1 col-md-4 col-sm-12">
 				<img src="img/portrait-crop.png" alt="A photograph of Taylor in a stairwell" id="portrait">
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12">
-				<p>Hailing from the Okanagan Valley and living in Vancouver BC, I'm a front-end web developer who is getting her B.Sc. in Interactive Arts and Technology at SFU.</p>
-				<p>My goal is to create websites and applications that reflect my client's identity while providing a pleasant experience for the end user.</p>
-				<p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
-				<p>Interested in hearing about my work, or want to have a chat? Feel free to shoot me an e-mail.</p>
-				<p><em>Outside of work-related stuff, you can talk with me about Rupaul's Drag Race, your D&D character, your favorite video game, or your dog.</em></p>
+				<p>I'm a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
+				<p>My goal is to design websites and applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user.</p>
+				<!-- <p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p> -->
+				<p>Interested in hearing about my work? Want to tell me about your D&D character, your dog, or who you're rooting for on Rupaul's Drag Race? Feel free to <a href="mailto:tjwilkin@sfu.ca">shoot me an e-mail</a>!</p>
 			</div>
 		</div> <!-- end the first summary row -->
 
