Added text to footer

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 				<p>I'm a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
 				<p>My goal is to design websites and applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user.</p>
 				<!-- <p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p> -->
-				<p>Interested in hearing about my work? Want to tell me about your D&D character, your dog, or who you're rooting for on Rupaul's Drag Race? Feel free to <a href="mailto:tjwilkin@sfu.ca">shoot me an e-mail</a>!</p>
+				<p>Interested in hearing about my work? Want to tell me about your D&D character, your dog, or who you're rooting for on Rupaul's Drag Race? Feel free to <a href="mailto:tjwilkinsonn@gmail.com">shoot me an e-mail</a>!</p>
 			</div>
 		</div> <!-- end the first summary row -->
 
@@ -82,15 +82,22 @@
 	<footer class="footer" id="portfolio-footer">
 		<div class="container">
 			<div class="row">
-				<a href="https://github.com/TaylorWilkinson/" target="_blank">
-					<img class="icon" src="img/github-logo.png" alt="GitHub logo">
-				</a>
-				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
-					<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
-				</a>
-				<a href="mailto:tjwilkin@sfu.ca">
-					<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
-				</a>
+				<div class="col">
+					<a href="https://github.com/TaylorWilkinson/" target="_blank">
+						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+					</a>
+					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+					</a>
+					<a href="mailto:tjwilkinsonn@gmail.com">
+						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<p id="footer-copy">designed & hand coded with love and care</p>
 			</div>
 		</div>
 	</footer> <!-- footer -->
