--- a/work/times-past.html
+++ b/work/times-past.html
@@ -174,15 +174,22 @@
 	<footer class="footer" id="portfolio-footer">
 		<div class="container">
 			<div class="row">
-				<a href="https://github.com/TaylorWilkinson/" target="_blank">
-					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
-				</a>
-				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
-					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
-				</a>
-				<a href="mailto:tjwilkin@sfu.ca">
-					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
-				</a>
+				<div class="col">
+					<a href="https://github.com/TaylorWilkinson/" target="_blank">
+						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+					</a>
+					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+					</a>
+					<a href="mailto:tjwilkinsonn@gmail.com">
+						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<p id="footer-copy">designed & hand coded with love and care</p>
 			</div>
 		</div>
 	</footer> <!-- footer -->
