--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="img/favicon/site.webmanifest">
 	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#2d89ef">
-	<meta name="theme-color" content="#ffffff">	
+	<meta name="theme-color" content="#ffffff">
 
 	<!-- normalize -->
 	<link rel="stylesheet" href="../css/normalize.min.css">
@@ -189,15 +189,22 @@
 	<footer class="footer" id="portfolio-footer">
 		<div class="container">
 			<div class="row">
-				<a href="https://github.com/TaylorWilkinson/" target="_blank">
-					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
-				</a>
-				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
-					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
-				</a>
-				<a href="mailto:tjwilkin@sfu.ca">
-					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
-				</a>
+				<div class="col">
+					<a href="https://github.com/TaylorWilkinson/" target="_blank">
+						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+					</a>
+					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+					</a>
+					<a href="mailto:tjwilkinsonn@gmail.com">
+						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<p id="footer-copy">designed & hand coded with love and care</p>
 			</div>
 		</div>
 	</footer> <!-- footer -->
