Fixing link to resume on work pages

--- a/work/myshape-board.html
+++ b/work/myshape-board.html
@@ -48,8 +48,8 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../index.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
+					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
