--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<a href="https://github.com/TaylorWilkinson/" target="_blank">
-							<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+						<a href="https://github.com/TaylorWilkinson/" target="_blank"><img class="icon" src="img/github-logo.png" alt="GitHub logo">
 						</a>
 						<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
 							<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
