--- a/work/sprout.html
+++ b/work/sprout.html
@@ -48,7 +48,7 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../index.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
+					<a href="./Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
 					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
