Completed content for Times Past page

--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@
 
 		<div class="row" id="full-width-content">
 			<div class="col-lg-3 offset-lg-1 col-md-4 col-sm-12">
-				<img src="img/portrait-crop.png" alt="A photograph of Taylor in a stairwell" id="portrait">
+				<img src="img/selfie.png" alt="A photograph of Taylor in a stairwell" id="portrait">
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12">
 				<p>I'm a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
-				<p>My goal is to design websites and applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user.</p>
+				<p>My goal is to design applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user.</p>
 				<!-- <p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p> -->
 				<p>Interested in hearing about my work? Want to tell me about your D&D character, your dog, or who you're rooting for on Rupaul's Drag Race? Feel free to <a href="mailto:tjwilkinsonn@gmail.com">shoot me an e-mail</a>!</p>
 			</div>
