--- a/work/studious-chef.html
+++ b/work/studious-chef.html
@@ -8,11 +8,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!-- favicons -->
-	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="img/favicon/site.webmanifest">
-	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="../img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="theme-color" content="#ffffff">
 
@@ -262,13 +262,13 @@ mbr;
 			<div class="row">
 				<div class="col">
 					<a href="https://github.com/TaylorWilkinson/" target="_blank">
-						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+						<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
 					</a>
 					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
-						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+						<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
 					</a>
 					<a href="mailto:tjwilkinsonn@gmail.com">
-						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+						<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
 					</a>
 				</div>
 			</div>
