--- a/work/times-past.html
+++ b/work/times-past.html
@@ -8,11 +8,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!-- favicons -->
-	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="img/favicon/site.webmanifest">
-	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="../img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="theme-color" content="#ffffff">
 
@@ -82,7 +82,7 @@
 			</div>
 			<div class="col-lg-4 no-side-padding">
 				<h2>my role</h2>
-				<p>Lead Developer, Team Lead</p>
+				<p>Unity Developer, QA, UI Designer</p>
 			</div>
 		</div> <!-- close project summary -->
 
@@ -98,7 +98,8 @@
 			<div class="col-lg-6">
 				<h2>development</h2>
 				<p>Time's Past was my first C# project in addition to being my first Unity project. Knowing that I was unfamiliar with the software, I searched basic tutorials in advance to learn more about Unity and writing C# scripts. I also was comfortable with Java prior to this course, and knowing that they're both languages based in C made me feel comfortable at the start of the project.</p>
-        <p>As the primary developer who became the sole developer as the semester progressed, the responsibility fell on me to set deadlines for the multiple stages of ... ... ... ... ...</p>
+        <p>As the sole developer for Time's Past, I was responsible all of the coding that went in to Time's Past. Since the tutorials provided in class only covered fundamentals, I was required to do additional research to make the quality game that my partner and I had in mind. I found tutorials on best practices and principles in game development that would improve my development exprience, such as single responsibility principle.</p>
+				<p>One of the more complicated scripts I wrote was our CameraController, which controlled the game's camera. While we had experimented with third party cameras such as Cinemachine, we could not implement the controlled rotation that we desired (namely, rotating the player and the camera 45 degrees with the press of a button). While it was not perfect, I was proud of what I created and learned a lot about the complications of developing a third-person camera in games.</p>
 			</div>
       <div class="col-lg-6">
 				<figure>
@@ -115,7 +116,8 @@
 			<div class="col-lg-6">
 				<h2>design</h2>
 				<p>In the early brainstorming stages, the project’s Creative Lead (Jules) presented her idea for a game based around solving puzzles across time by using a seeing-stone to view the past. In exploring the concept, we found inspiration in early 90’s point-and-click adventure games, such as Kings Quest and The Day Of The Tentacle.</p>
-				<p>During the game’s early iterations, I helped to flesh out the game’s narrative which would inform our design. I also made sketches and diagrams (such as our narrative flowboard) to aid in exploring potential features, UI elements, and mechanic concepts. Throughout development, I contributed to the game’s puzzle design by sharing my ideas as well as helping to expand on concepts from the group. My personal process included lots of sketching as well as research, to help find inspiration for environmental objects that would change over time, creating opportunities for interesting puzzles (i.e. a garden becoming overgrown when it is given increased access to light over time).</p>
+				<p>During the game’s early iterations, I helped to flesh out the game’s narrative which would inform our design. I also made sketches and diagrams (such as our narrative flowboard) to aid in exploring potential features, UI elements, and mechanic concepts. Throughout development, I contributed to the game’s puzzle design by sharing my ideas and expanding group concepts through sketching and research of real-world environments and aesthetics.</p>
+				<p>I was also responsible for the UI design during gameplay (excluding the cutscenes, which utilize the Fungus dialog system), such as the pop-up UI for gem collecting.</p>
 			</div>
       <div class="col-lg-6">
 				<figure>
@@ -130,8 +132,9 @@
     <div class="row">
 			<div class="col-lg-6">
 				<h2>reflections</h2>
-				<p>Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
-				<p>.Copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy copy</p>
+				<p>At the end of the course, we had a showcase where our professor brought in five industry professionals to judge our projects and choose the top three games in the class. These included designers and developers from game studios in Vancouver, ranging from medium-sized indie companies to industry giants like EA. Out of ten teams, we were awarded second place. We were also encouraged by the teaching staff and judges that we could release Time's Past as an indie title.</p>
+				<p>Looking back upon my experience creating Time's Past, I'm extremely proud of the end result. Working with Juliana Loughin as my artist and Creative Lead was a joy, and I believe we made a really enjoyable and unique game that fulfilled our goals for the scope of this project.</p>
+				<p>To complete this project and bring it to a level where it could be shared online, there are several changes that we would like to make. Personally, I would make a number of improvements to the game's navigation and UI. We also received feedback on how we could improve certain puzzle design elements to improve the overall experience, such as adding more obvious feedback when completing correct aspects of the puzzle (i.e a visual effect in addition to the audi ofeedback) and some more obvious hints.</p>
 				<button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button>
         <!-- <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button> -->
 			</div>
@@ -176,13 +179,13 @@
 			<div class="row">
 				<div class="col">
 					<a href="https://github.com/TaylorWilkinson/" target="_blank">
-						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+						<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
 					</a>
 					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
-						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+						<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
 					</a>
 					<a href="mailto:tjwilkinsonn@gmail.com">
-						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+						<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
 					</a>
 				</div>
 			</div>
